# taskw

./: Cargo.toml
examples/: add_tag.json  add_task.json  task_completed.json  task_deleted.json
hooks/: on-add.taskwiki.sh  on-modify.taskwiki.sh
src/: cli.rs  config.rs  datetime_format.rs  hooks.rs  lib.rs  notes.rs  task.rs
src/hooks/: mod.rs  on_add.rs  on_modify.rs
