[package]
name = "taskw"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
